tests/snapshots/scripts_sanitized/Admin API Tool/FMPlugins - ID 107/Enable_Disable DBS Install Plug-ins Script - ID 113.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Enable/Disable DBS Install Plug-ins Script
#  HISTORY:
				   - Created:   2020-01-12 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/plugins/DbsAllowInstallPluginScript" ]
// Variable setzen [ $json ; JSONSetElement ( ""
				 ; [ "allowInstallPlugin"; FMS__fmserver::allowInstallPlugin ; JSONString ]
				) ]
Variable setzen [ $json ; "allowInstallPlugin=" & Falls ( 
				  LiesAlsBoolean ( FMS__fmserver::allowInstallPlugin ); 
				  "true";
				  "false"
				) ]
Variable setzen [ $curloptions ; " --request POST" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/x-www-form-urlencoded\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Script ausführen [ Aus Liste ; "Get DBS Plug-in Configuration" ]
# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
